--- a/model.tex
+++ b/model.tex
@@ -45,6 +45,7 @@ new blocks. If all the blocks are valid, we say
 that $[b_1, ..., b_k]$ forms a valid blockchain.
 
 
+\textcolor{orange}{mr: not sure if we want to discuss multi-asset support. We could make this section leaner, as we focus more on optimality in communication?}
 \textbf{Multi-asset Support}. A ledger which supports transacting with not only the 
 primary currency, e.g. BitCoin on the BitCoin 
 platform, or Ada on Cardano, but also other types of currencies, is called 
